Update Gradle setup and plugin configuration
Enabled Gradle delegated builds and specified settings such as test runner and distribution type. Adjusted `untilBuild` in `build.gradle.kts` to limit compatibility. Cleaned up unused XML configuration and ensured formatting consistency in `plugin.xml`.

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -14,8 +14,8 @@
     <extensions defaultExtensionNs="com.intellij">
         <!-- Application-level settings to avoid UI conflicts -->
         <applicationService serviceImplementation="com.clipcraft.ClipCraftSettings"/>
-        <applicationConfigurable instance="com.clipcraft.ClipCraftConfigurable"
-                                 displayName="ClipCraft" id="ClipCraftConfigurable"/>
+        <applicationConfigurable instance="com.clipcraft.ClipCraftConfigurable" displayName="ClipCraft" id="ClipCraftConfigurable"/>
+
     </extensions>
 
     <actions>
