--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -4,27 +4,37 @@
     <version>1.0.0</version>
     <vendor email="support@clipcraft.com" url="https://clipcraft.com">ClipCraft Inc.</vendor>
     <description><![CDATA[
-      ClipCraft bulk-copies multiple files and directories (including subdirectories)
-      and formats their contents for easy sharing. Large files are handled in the background,
-      user settings are remembered persistently, and minimal clicks are required to use.
-    ]]></description>
+    ClipCraft bulk-copies multiple files and directories (including subdirectories)
+    and formats their contents for easy sharing. Large files are handled in the background,
+    and user settings are stored persistently for minimal friction.
+  ]]></description>
 
+    <!-- Our plugin requires at least platform modules. -->
     <depends>com.intellij.modules.platform</depends>
 
     <extensions defaultExtensionNs="com.intellij">
-        <!-- Application-level settings to avoid UI conflicts -->
+        <!-- Our persistent state management -->
         <applicationService serviceImplementation="com.clipcraft.ClipCraftSettings"/>
-        <applicationConfigurable instance="com.clipcraft.ClipCraftConfigurable" displayName="ClipCraft" id="ClipCraftConfigurable"/>
 
+        <!-- Register a user-facing settings page under "File → Settings → ClipCraft" -->
+        <applicationConfigurable
+                instance="com.clipcraft.ClipCraftConfigurable"
+                displayName="ClipCraft"
+                id="ClipCraftConfigurable" />
     </extensions>
 
     <actions>
-        <action id="ClipCraftAction" class="com.clipcraft.ClipCraftAction"
+        <action
+                id="ClipCraftAction"
+                class="com.clipcraft.ClipCraftAction"
                 text="ClipCraft: Copy Formatted Code"
                 description="Copies multiple files' code in bulk.">
+            <!-- Appear in Editor popup menu, Project View popup, and main toolbar. -->
             <add-to-group group-id="EditorPopupMenu" anchor="last"/>
             <add-to-group group-id="ProjectViewPopupMenu" anchor="last"/>
             <add-to-group group-id="MainToolBar" anchor="last"/>
+
+            <!-- Shortcut: Ctrl+Alt+X -->
             <keyboard-shortcut keymap="$default" first-keystroke="ctrl alt X"/>
         </action>
     </actions>
