Add support for output formats and import removal
Enhanced ClipCraft with new features including support for multiple output formats (Markdown, Plain Text, and HTML) and an option to remove import statements. Updated UI components in settings, quick options, and dialogs to reflect these changes. Added corresponding logic and tests to ensure proper functionality.

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -28,6 +28,7 @@
             <add-to-group group-id="EditorPopupMenu" anchor="last"/>
             <add-to-group group-id="ProjectViewPopupMenu" anchor="last"/>
             <add-to-group group-id="MainToolBar" anchor="last"/>
+            <add-to-group group-id="EditorTabPopupMenu" anchor="last"/>
             <keyboard-shortcut keymap="$default" first-keystroke="ctrl alt X"/>
         </action>
     </actions>
