--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,35 +1,60 @@
 <idea-plugin>
     <id>com.clipcraft</id>
     <name>ClipCraft</name>
-    <version>1.0.0</version>
+    <version>2.0.0</version>
     <vendor email="support@clipcraft.com" url="https://clipcraft.com">ClipCraft Inc.</vendor>
+
     <description><![CDATA[
-        ClipCraft bulk-copies multiple files and directories (including subdirectories)
-        and formats their contents for easy sharing. Large files are handled in the background,
-        and user settings are stored persistently with an intuitive UI.
+        ClipCraft copies and formats code from multiple files/directories.
+        Now featuring a live preview, custom themes, macros,
+        Git metadata, multi-export, wizard, and more.
     ]]></description>
 
     <depends>com.intellij.modules.platform</depends>
 
     <extensions defaultExtensionNs="com.intellij">
-        <applicationService serviceImplementation="com.clipcraft.ClipCraftSettings"/>
+        <!-- Persistent state -->
+        <applicationService serviceImplementation="com.clipcraft.services.ClipCraftSettings"/>
+        <!-- If you use project-level service: -->
+        <!-- <projectService serviceImplementation="com.clipcraft.services.ClipCraftProjectProfileManager"/> -->
+
+        <!-- Configurable -->
         <applicationConfigurable
-                instance="com.clipcraft.ClipCraftConfigurable"
+                instance="com.clipcraft.ui.ClipCraftConfigurable"
                 displayName="ClipCraft"
                 id="ClipCraftConfigurable" />
+
+        <!-- Search Everywhere -->
+        <searchEverywhereContributor implementation="com.clipcraft.integration.ClipCraftSearchEverywhereContributor"/>
     </extensions>
 
     <actions>
         <action
                 id="ClipCraftAction"
-                class="com.clipcraft.ClipCraftAction"
+                class="com.clipcraft.actions.ClipCraftAction"
                 text="ClipCraft: Copy Formatted Code"
                 description="Copies and formats code from selected files in bulk.">
             <add-to-group group-id="EditorPopupMenu" anchor="last"/>
             <add-to-group group-id="ProjectViewPopupMenu" anchor="last"/>
             <add-to-group group-id="MainToolBar" anchor="last"/>
             <add-to-group group-id="EditorTabPopupMenu" anchor="last"/>
-            <keyboard-shortcut keymap="$default" first-keystroke="ctrl alt X"/>
+            <keyboard-shortcut keymap="\$default" first-keystroke="ctrl alt X"/>
+        </action>
+
+        <action
+                id="ClipCraftWizardAction"
+                class="com.clipcraft.actions.ClipCraftWizardAction"
+                text="ClipCraft: Setup Wizard"
+                description="Interactive wizard to configure ClipCraft.">
+            <add-to-group group-id="ToolsMenu" anchor="last"/>
+        </action>
+
+        <action
+                id="ClipCraftResetDefaultsAction"
+                class="com.clipcraft.actions.ClipCraftResetDefaultsAction"
+                text="ClipCraft: Reset to Defaults"
+                description="Reset ClipCraft settings to their default values.">
+            <add-to-group group-id="ToolsMenu" anchor="last"/>
         </action>
     </actions>
 </idea-plugin>
