--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -13,21 +13,24 @@
     <depends>com.intellij.modules.platform</depends>
 
     <extensions defaultExtensionNs="com.intellij">
-        <!-- Persistent state -->
+        <!-- Application-Level Persistent State -->
         <applicationService serviceImplementation="com.clipcraft.services.ClipCraftSettings"/>
-        <!-- If you use project-level service, uncomment the following:
-        <projectService serviceImplementation="com.clipcraft.services.ClipCraftProjectProfileManager"/>
-        -->
-        <!-- Configurable -->
+
+        <!-- Uncomment if using per-project configs:
+             <projectService serviceImplementation="com.clipcraft.services.ClipCraftProjectProfileManager"/> -->
+
+        <!-- Settings/Configurable in IntelliJ's Preferences UI -->
         <applicationConfigurable
                 instance="com.clipcraft.ui.ClipCraftConfigurable"
                 displayName="ClipCraft"
-                id="ClipCraftConfigurable" />
-        <!-- Search Everywhere -->
+                id="ClipCraftConfigurable"/>
+
+        <!-- Search Everywhere Integration -->
         <searchEverywhereContributor implementation="com.clipcraft.integration.ClipCraftSearchEverywhereContributor"/>
     </extensions>
 
     <actions>
+        <!-- Main Action -->
         <action
                 id="ClipCraftAction"
                 class="com.clipcraft.actions.ClipCraftAction"
@@ -40,6 +43,7 @@
             <keyboard-shortcut keymap="$default" first-keystroke="ctrl alt X"/>
         </action>
 
+        <!-- Wizard Action -->
         <action
                 id="ClipCraftWizardAction"
                 class="com.clipcraft.actions.ClipCraftWizardAction"
@@ -48,6 +52,7 @@
             <add-to-group group-id="ToolsMenu" anchor="last"/>
         </action>
 
+        <!-- Reset to Defaults Action -->
         <action
                 id="ClipCraftResetDefaultsAction"
                 class="com.clipcraft.actions.ClipCraftResetDefaultsAction"
