--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,8 +15,16 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'
+          distribution: temurin
           java-version: '17'
+
+      - name: Determine Plugin Version
+        id: version
+        run: |
+          # Retrieve the latest tag (or commit SHA if no tag found)
+          PLUGIN_VERSION=$(git describe --tags --always)
+          echo "PLUGIN_VERSION=$PLUGIN_VERSION" >> $GITHUB_ENV
+          echo "Plugin version determined as: $PLUGIN_VERSION"
 
       - name: Cache Gradle Files
         uses: actions/cache@v3
@@ -24,13 +32,22 @@ jobs:
           path: |
             ~/.gradle/caches
             ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle/wrapper/gradle-wrapper.properties') }}
+
+      - name: Run Tests
+        run: ./gradlew clean test --no-daemon --stacktrace
 
       - name: Build Plugin
-        run: ./gradlew clean build --no-daemon
+        run: ./gradlew clean buildPlugin --no-daemon --stacktrace
+
+      - name: Patch Plugin XML
+        run: ./gradlew patchPluginXml --no-daemon --stacktrace
+        env:
+          PLUGIN_VERSION: ${{ env.PLUGIN_VERSION }}
 
       - name: Publish Plugin
         if: github.event_name == 'push'
         env:
           JB_PLUGIN_REPOSITORY_TOKEN: ${{ secrets.JB_PLUGIN_REPOSITORY_TOKEN }}
+          PLUGIN_VERSION: ${{ env.PLUGIN_VERSION }}
         run: ./gradlew publishPlugin --no-daemon --stacktrace
