Update Gradle publish step to include publishToken parameter
The `publishPlugin` command now explicitly passes the `publishToken` using `-PpublishToken`. This ensures that the token is correctly passed as a parameter during the publishing process.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -56,4 +56,5 @@ jobs:
         env:
           JB_PLUGIN_REPOSITORY_TOKEN: ${{ secrets.JB_PLUGIN_REPOSITORY_TOKEN }}
           PLUGIN_VERSION: ${{ env.PLUGIN_VERSION }}
-        run: ./gradlew publishPlugin --no-daemon --stacktrace
+        run: |
+          ./gradlew publishPlugin -PpublishToken=$JB_PLUGIN_REPOSITORY_TOKEN --no-daemon --stacktrace
